# vdhh

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python_qa.yml
block/: blockdev.c
devices/: i8254.c  i8259.c  pc.c  qdev.c
include/cli/: veertu_manager.py
libusb/libusb/os/: darwin_usb.c
linux-add-ons/: copy_paste.c
src/veertu_cli/: __init__.py  cli_interface.py  formatter.py  utils.py  veertu_manager.py
tests/: test_cli_interface.py
util/: vl.c  vnet.c
vda/: Info.plist  Localizable.strings  main.m
vmm/: veertu.c  x86_cpuid.c  x86_flags.c  x86_flags.h  x86_mmu.c  x86veertu.c
vmmanager/: VMImportExport.m  VMLibrary.h  VMLibrary.m
vmx.xcodeproj/: project.pbxproj
window/: VmApp.m
